--- a/calculadora.html
+++ b/calculadora.html
@@ -4,71 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>FIAP CAP 4 | calculadora</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,700;1,100&display=swap');
 
-html,body{
-	height: 100%;
-}
-body{
-	margin: 0;
-	padding: 0;
-	background: linear-gradient(to left, #255c98, #a4edea) no-repeat;
-	width: 100%;
-	height: 100%;
-    font-family: 'Poppins', sans-serif;
-}
-
-h1{
-    font-size: 20px;
-    color: #fff;
-}
-
-.calculadora{
-	width: 250px;
-	height: 500px;
-	padding: 10px 20px;
-	border: 5px solid white;
-	border-radius: 4px;
-	position: relative;
-	top: 50%;
-	left:50%;
-	transform: translate(-50%, -50%);
-}
-#resultado{
-	background: none;
-	padding: 5px;
-	box-sizing: border-box;
-	margin-bottom: 20px;
-	margin-top: 10px;
-	border: 5px solid white;
-	border-radius: 4px;
-	color: white;
-	width: 100%;
-	height: 60px;
-    font-family: 'Poppins', sans-serif;
-	font-size: 30px;
-}
-.bt{
-	outline: none;
-	width:55px;
-    height:55px;
-    margin: 2px;
-    padding: 9px;
-    background: none;
-    border: 5px solid white;
-	border-radius: 4px;
-	color: white;
-	font-size: 20px;
-	text-align: center;
-	cursor: pointer;
-}
-.bn:hover{
-	transform: scale(1.08);
-	transition: .5s;
-}
-    </style>
 </head>
 <body>
    <div class="calculadora">
@@ -107,33 +45,12 @@ h1{
         </tr>
     </table>
    </div>
-   <script>
-        function insert(num)
-        {
-            var numero = document.getElementById('resultado').innerHTML;
-            document.getElementById('resultado').innerHTML = numero + num;
-        }
-        function clean()
-        {
-            document.getElementById('resultado').innerHTML = "";
-        }
-        function back()
-        {
-            var resultado = document.getElementById('resultado').innerHTML;
-            document.getElementById('resultado').innerHTML = resultado.substring(0, resultado.length -1);
-        }
-        function calcular()
-        {
-            var resultado = document.getElementById('resultado').innerHTML;
-            if(resultado)
-            {
-                document.getElementById('resultado').innerHTML = eval(resultado);
-            }
-            else
-            {
-                document.getElementById('resultado').innerHTML = "Nada..."
-            }
-        }
-</script>
+
+
+
+   
+    <script src="./javascript.js"></script>
+
 </body>
+
 </html>
